gatsby advanced starter with a different landing page route

--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -2,9 +2,9 @@
 title: "Bold Mage"
 cover: "8.jpg"
 date: "2017-01-01"
-category: "tech"
+category: "money"
 tags:
-    - programming
+    - butts
     - stuff
     - other
 ---
