--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -1,12 +1,12 @@
 ---
 title: "Bold Mage"
-cover: "8.jpg"
+cover: "images/icon.png"
 date: "2017-01-01"
-category: "money"
+category: "Reds"
 tags:
-    - butts
-    - stuff
-    - other
+    - Italy
+    - Merlot
+    - Woodbridge
 ---
 
 # Quanto et ius coniunctis urbes
